--- a/countdown.css
+++ b/countdown.css
@@ -16,6 +16,7 @@ body {
 }
 
 .event-end-time, .time-left {
+    text-align: center;
     margin: 10px 0;
     padding: 8px;
     background-color: #e9ecef;
