--- a/countdown.css
+++ b/countdown.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-     font-family: 'Helvetica Neue', Times New Roman, Helvetica, Arial, sans-serif;
+    font-family: 'Helvetica Neue', Times New Roman, Helvetica, Arial, sans-serif;
 }
 
 .countdown-container {
@@ -17,4 +17,20 @@ body {
     margin: 10px 0;
     padding: 8px;
     border-radius: 5px;
+}
+
+.event-end-time:hover::after {
+    content: attr(title);
+    position: absolute;
+    padding: 5px 10px;
+    background: #333;
+    color: #fff;
+    border-radius: 6px;
+    font-size: 12px;
+    z-index: 1000;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
 }
