--- a/event.css
+++ b/event.css
@@ -20,10 +20,34 @@
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     background: rgba(255, 177, 8, 0.3); 
     backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);/* 苹果多少是有点大病 */
 }
 
-/* 苹果多少是有点大病 */
-@supports not (backdrop-filter) {
-.R70Mto_container {
-    -webkit-backdrop-filter: blur(8px);
+.R70Mto_container:last-child {
+            margin-bottom: 0;
+        }
+
+.floating-nav {
+    position: fixed;
+    top: 50%; 
+    right: 10px;
+    transform: translateY(-50%);
+    z-index: 1000;
+    background-color: rgba(255,255,255,0.9);
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+.floating-nav a {
+    display: block;
+    margin: 10px 0;
+    color: #007bff;
+    text-decoration: none;
+}
+
+@media (orientation: portrait) {
+  .floating-nav {
+    display: none;
+  }
 }
