--- a/event.css
+++ b/event.css
@@ -98,9 +98,8 @@
 .R70Mto_bg_parallax {
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
-    background-size: 720px auto;
 }
 
 #p_bg1 { background-image: url('https://img.ts-dm.net/images/2024/03/04/97283983_p0.png'); }
