--- a/event.css
+++ b/event.css
@@ -22,10 +22,16 @@
     background: rgba(255, 177, 8, 0.3); 
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);/* 苹果多少是有点大病 */
+    min-height: 20%;
 }
 
 .R70Mto_container p{
     text-indent: 2em !important;
+}
+
+.R70Mto_container img {
+    max-width: 100%;
+    height: auto;
 }
 
 .R70Mto_container:last-child {
