--- a/event.css
+++ b/event.css
@@ -1,6 +1,6 @@
 .R70Mto_title {
     text-align: center;
-    font-size: 40px;
+    font-size: 20px !important;
     font-weight: normal;
     padding: 20px;
     margin-bottom: 10px;
