--- a/Style/event.css
+++ b/Style/event.css
@@ -36,11 +36,13 @@
 
 .R70Mto_subcontainer {
     width: 100%;
+    padding: 20px;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2), /* 主阴影 */
-    0px 6px 20px rgba(0, 0, 0, 0.19); 
+    0px 6px 20px rgba(0, 0, 0, 0.19);
     transition: box-shadow 0.3s ease;
+    margin-block: 10px;
 }
 
 
@@ -124,11 +126,6 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.7);
-}
-
-.R70Mto_gallery_full img {
-    width: 100%;
-    height: 100%;
 }
 
 @media (orientation: portrait) {
