--- a/Style/countdown.css
+++ b/Style/countdown.css
@@ -34,3 +34,15 @@ body {
     white-space: nowrap;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
 }
+
+@media (prefers-color-scheme: dark) {
+
+    .event-end-time, .time-left {
+        color: #f3f4f6;
+    }
+
+        .event-end-time:hover::after {
+            color: #111;
+            box-shadow: 0 0 8px rgba(255,255,255,0.3);
+        }
+}
