--- a/Style/event.css
+++ b/Style/event.css
@@ -10,14 +10,14 @@
 }
 
 .R70Mto_link a {
-    color: #007bff; 
+    color: #007bff !important;
     text-decoration: none;
 }
 
 .R70Mto_link a:hover {
-    color: #0056b3;
-    text-decoration: underline;
-}
+        color: #0056b3 !important;
+        text-decoration: underline;
+    }
 
 .R70Mto_subtitle {
     text-align: center;
